# rust-faust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
example-dbmeter-jack/: Cargo.toml
example-dbmeter-jack/dsp/: volume.dsp
example-dbmeter-jack/src/: main.rs
example-jack/: Cargo.toml  build.rs
example-jack/src/: jack.rs
example-midi-jack/dsp/: volume.dsp
example-midi-jack/src/: jack.rs  main.rs
examples/dsp-macro/: Cargo.toml  DEBUG_volume_control.dsp  DEBUG_volume_control.json
examples/dsp-macro/src/: main.rs
examples/example-dbmeter-jack/: Cargo.toml
examples/example-dbmeter-jack/dsp/: volume.dsp
examples/example-dbmeter-jack/src/: main.rs
examples/example-f64/: Cargo.toml  build.rs
examples/example-f64/dsp/: volume.dsp.json  volume.dsp.xml
examples/example-f64/src/: dsp.rs  main.rs
examples/example-jack/: Cargo.toml
examples/example-jack-macro/: Cargo.toml
examples/example-jack-macro/src/: main.rs
examples/example-jack-new/: Cargo.toml  build.rs
examples/example-jack-new/dsp/: volume.dsp  volume.dsp.json
examples/example-jack-new/src/: dsp.rs  main.rs
examples/example-jack/dsp/: volume.dsp
examples/example-jack/src/: main.rs
examples/example-mixer-ui-slint-jack/: Cargo.toml  build.rs  vumeter-division.js  vumeter-division.py
examples/example-mixer-ui-slint-jack/dsp/: mixer.dsp
examples/example-mixer-ui-slint-jack/src/: jack.rs  main.rs
examples/example-mixer-ui-slint-jack/ui/: main.slint
examples/example-ui-jack/: Cargo.toml
examples/example-ui-jack/dsp/: volume.dsp
examples/example-ui-jack/src/: main.rs
examples/example-ui-slint-jack/: Cargo.toml  build.rs
examples/example-ui-slint-jack/dsp/: volume.dsp
examples/example-ui-slint-jack/src/: dsp.rs  jack.rs  main.rs
examples/example-ui-slint-jack/ui/: main.slint
examples/file-f64/: Cargo.toml  build.rs
examples/file-f64/dsp/: volume.dsp  volume.dsp.json  volume.dsp.xml
examples/file-f64/src/: dsp.rs  main.rs
examples/include-macro/: Cargo.toml
examples/include-macro/dsp/: volume.dsp  volume.dsp.json  volume2.dsp.json
examples/include-macro/src/: main.rs
examples/jack-ui/: Cargo.toml  build.rs
examples/jack-ui/dsp/: volume.dsp  volume.dsp.json
examples/jack-ui/src/: dsp.rs  main.rs
examples/jack-utils/: Cargo.toml
examples/jack-utils/src/: lib.rs
examples/minimal/: Cargo.toml  build.rs
examples/minimal/dsp/: volume.dsp
examples/minimal/src/: dsp.rs  main.rs
examples/template-file/: Cargo.toml  build.rs
examples/template-file/src/: main.rs
faust-build/: Cargo.toml  faust-template.rs
faust-build/src/: architecture.rs  builder.rs  code_option.rs  codegen.rs  compile_option.rs  compile_options.rs  dsp_path.rs  faust_arg.rs  faust_utils.rs  json.rs  lib.rs  macro_lib.rs  option_map.rs
faust-description-json/: Cargo.toml
faust-description-json/src/: deserialize.rs  enum_interface.rs  lib.rs  struct_interface.rs
faust-description-json/tests/: tests.rs
faust-description-xml/: Cargo.toml  README.md
faust-description-xml/src/: lib.rs
faust-description-xml/tests/: tests.rs
faust-json/: Cargo.toml
faust-json/src/: deserialize.rs  enum_interface.rs  lib.rs  struct_interface.rs
faust-json/tests/: tests.rs
faust-macro/: Cargo.toml
faust-macro-lib/: Cargo.toml
faust-macro-lib/src/: lib.rs
faust-macro/src/: lib.rs
faust-state/: Cargo.toml
faust-state/src/: lib.rs
faust-types/: Cargo.toml
faust-types/src/: lib.rs
faust-ui/: Cargo.toml
faust-ui/src/: enum_interface.rs  lib.rs  meta_strings.rs  struct_interface.rs
faust-xml/: Cargo.toml
faust-xml/src/: lib.rs
faust-xml/tests/: tests.rs
scripts/: bump-version.sh
