[workspace]
members = [
  "faust-build",
  "faust-json",
  "faust-macro",
  "faust-macro-lib",
  "faust-state",
  "faust-types",
  "faust-xml",
  "examples/example-jack",
  "examples/example-jack-macro",
  "examples/example-dbmeter-jack",
  "examples/example-f64",
]
resolver="2"

[workspace.dependencies]
faust-json.path = "./faust-json"
