[package]
name = "faust-build"
version = "0.2.1"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>", "obsoleszenz <obsoleszenz@riseup.net>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Build FAUST dsp files into Rust modules as part of the normal crate compilation"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["codegen"]
codegen = ["dep:faust-json", "dep:proc-macro2", "dep:syn", "dep:quote"]

[dependencies]
tempfile = "3.2.0"
heck = "0.3.2"

# dependencies for codegen feature
faust-json = { workspace = true, optional = true}
proc-macro2 = { version="*", optional = true}
syn = { version = "^2.0", optional = true }
quote = { version = "^1.0", optional = true }

[build-dependencies]
regex = "*"
heck = "0.3.2"
