[package]
name = "faust-build"
version = "0.2.1"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>", "obsoleszenz <obsoleszenz@riseup.net>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Build FAUST dsp files into Rust modules as part of the normal crate compilation"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["codegen"]
json = ["dep:faust-description-json", "dep:serde_json"]
codegen = ["json", "dep:proc-macro2", "dep:syn", "dep:quote", ]

[dependencies]
tempfile.workspace = true
heck.workspace = true

# dependencies for json feature
serde_json = { workspace = true, optional = true }

# dependencies for codegen feature
faust-description-json = { workspace = true, optional = true}
proc-macro2 = { workspace = true, optional = true}
syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }


[build-dependencies]
regex.workspace = true
