[package]
name = "faust-description-json"
version = "0.2.0"
authors = ["crop2000"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
heck.workspace = true
strum_macros.workspace = true
serde.workspace = true
