[package]
name = "faust-description-xml"
version = "0.2.0"
authors = ["crop2000"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true 

quick-xml.workspace = true 
serde_path_to_error.workspace = true
