[package]
name = "faust-macro-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
#faust-build = { git = "http://github.com/Frando/rust-faust.git" }
#faust-description-json = { git = "http://github.com/Frando/rust-faust.git" }
faust-build.workspace = true
faust-description-json.workspace = true

prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace =true
serde_json.workspace = true
syn.workspace = true
tempfile.workspace = true
