[package]
name = "faust-macro-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
#faust-build = { git = "http://github.com/Frando/rust-faust.git" }
#faust-json = { git = "http://github.com/Frando/rust-faust.git" }
faust-build = { path = "../faust-build" }
faust-json =  { path = "../faust-json" }

prettyplease = "^0.2"
proc-macro2 = "*"
quote = "^1.0"
serde_json = "*"
syn = "^2.0"
tempfile = "3.2"