[package]
name = "faust-macro"
version = "0.2.0"
authors = ["olafklingt","crop2000"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[features]

[dependencies]
#faust-build = { git = "http://github.com/Frando/rust-faust.git" }
#faust-json = { git = "http://github.com/Frando/rust-faust.git" }
faust-build.workspace = true
faust-description-json.workspace = true
faust-macro-lib.workspace = true

tempfile.workspace = true
prettyplease.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
