[package]
name = "faust-macro"
version = "0.2.0"
authors = ["olafklingt","crop2000"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[features]

[dependencies]
faust-build = { git = "http://github.com/Frando/rust-faust.git" ,features = ["faust-ui"]}
syn = { version = "^2.0", default-features = false }
