[package]
name = "faust-types"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["jack"]
jack = ["dep:jack", "dep:libm"]

[dependencies]
jack = { version = "0.7.0", optional = true }
libm = { version = "0.2.1", optional = true }