[package]
name = "faust-ui"
version = "0.2.0"
authors = ["crop2000"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faust-json = { git = "http://github.com/Frando/rust-faust.git"}
# faust-json =  { path = "../faust-json" }

quote = "^1.0"
syn = "^2.0"
proc-macro2 = "*"
heck = "0.3"
