[package]
name = "example-ui"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faust-types = { path = "../faust-types" }
faust-state = { path = "../faust-state" }
jack = "0.7.0"
rtrb = "0.1.3"

[build-dependencies]
faust-build = { path = "../faust-build" }
