[package]
name = "include-macro"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-boxed"]

[dependencies]
faust-macro = { path = "../../faust-macro" }
faust-types = { path = "../../faust-types" }
faust-state = { path = "../../faust-state" }
jack-utils = { path = "../jack-utils" }
jack = "0.7.0"
smallvec = "1.6.1"
rtrb = "0.1.3"
default-boxed = { version = "*", optional = true}
strum = { version = "0.27", features = ["derive"] }

[build-dependencies]
