[package]
name = "template-file"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["default-boxed"]

[dependencies]
faust-types = { git = "http://github.com/Frando/rust-faust.git" }
#faust-types = { path = "../../faust-types" }
faust-state = { path = "../../faust-state" }
jack-utils = { path = "../jack-utils" }
jack = "0.13"
smallvec = "1.6.1"
rtrb = "0.1.3"
default-boxed = { version = "*", optional = true}

[build-dependencies]
faust-build = { path = "../../faust-build" }
